--- a/requirements.txt
+++ b/requirements.txt
@@ -1,77 +1,64 @@
 aiohttp==3.8.5
 aiosignal==1.3.1
 altair==5.1.1
-annotated-types==0.5.0
-anyio==3.7.1
+annotated-types==0.6.0
+appnope==0.1.3
+asttokens==2.4.0
 async-timeout==4.0.3
 attrs==23.1.0
-backoff==2.2.1
-bcrypt==4.0.1
+backcall==0.2.0
 blinker==1.6.2
 cachetools==5.3.1
 certifi==2023.7.22
-charset-normalizer==3.2.0
-chroma-hnswlib==0.7.3
-chromadb==0.4.13
+charset-normalizer==3.3.0
 click==8.1.7
-coloredlogs==15.0.1
-cycler==0.11.0
+decorator==5.1.1
 dnspython==2.4.2
-exceptiongroup==1.1.3
-fastapi==0.103.1
-filelock==3.12.4
-flatbuffers==23.5.26
-fonttools==4.28.5
+elevenlabs==0.2.26
+executing==2.0.0
 frozenlist==1.4.0
-fsspec==2023.9.2
 gitdb==4.0.10
 GitPython==3.1.37
 google-api-core==2.12.0
 google-api-python-client==2.101.0
-google-auth==2.23.0
+google-auth==2.23.2
 google-auth-httplib2==0.1.1
 googleapis-common-protos==1.60.0
-h11==0.14.0
 httplib2==0.22.0
-httptools==0.6.0
-huggingface-hub==0.16.4
-humanfriendly==10.0
 idna==3.4
 importlib-metadata==6.8.0
-importlib-resources==6.1.0
+ipython==8.16.1
+jedi==0.19.1
 Jinja2==3.1.2
 jsonschema==4.19.1
 jsonschema-specifications==2023.7.1
-kiwisolver==1.3.2
 loguru==0.7.2
 markdown-it-py==3.0.0
 MarkupSafe==2.1.3
-matplotlib==3.5.1
+matplotlib-inline==0.1.6
 mdurl==0.1.2
-monotonic==1.6
-mpmath==1.3.0
 multidict==6.0.4
-networkx==2.6.3
 numpy==1.26.0
-onnxruntime==1.16.0
-openai==0.28.0
-overrides==7.4.0
-packaging==21.3
+openai==0.28.1
+packaging==23.2
 pandas==2.1.1
-Pillow==9.0.0
+parso==0.8.3
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==10.0.1
 pinecone-client==2.2.4
-posthog==3.0.2
+prompt-toolkit==3.0.39
 protobuf==4.24.3
-pulsar-client==3.3.0
+ptyprocess==0.7.0
+pure-eval==0.2.2
 pyarrow==13.0.0
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
-pydantic==2.4.0
-pydantic_core==2.10.0
+pydantic==2.4.2
+pydantic_core==2.10.1
 pydeck==0.8.1b0
 Pygments==2.16.1
-pyparsing==3.0.6
-PyPika==0.48.9
+pyparsing==3.1.1
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 pytz==2023.3.post1
@@ -83,27 +70,21 @@ rpds-py==0.10.3
 rsa==4.9
 six==1.16.0
 smmap==5.0.1
-sniffio==1.3.0
-starlette==0.27.0
+stack-data==0.6.3
 streamlit==1.27.1
-sympy==1.12
-tdqm==0.0.1
 tenacity==8.2.3
-tokenizers==0.14.0
 toml==0.10.2
 toolz==0.12.0
 tornado==6.3.3
 tqdm==4.66.1
-typer==0.9.0
+traitlets==5.11.2
 typing_extensions==4.8.0
 tzdata==2023.3
 tzlocal==5.0.1
 uritemplate==4.1.1
-urllib3==1.26.16
-uvicorn==0.23.2
-uvloop==0.17.0
+urllib3==2.0.5
 validators==0.22.0
-watchfiles==0.20.0
+wcwidth==0.2.8
 websockets==11.0.3
 yarl==1.9.2
 youtube-transcript-api==0.6.1
